--- a/project/Leonardite.html
+++ b/project/Leonardite.html
@@ -10,7 +10,9 @@
 </head>
 <body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/AAZ web preview-min.png">
+    <div class="center">
+        <img class="fullwidth" src="../assets/AAZ web preview-min.png">
+    </div>
     <section>
         <div class="h1div">
             <h1>Leornardite</h1>
