--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -10,7 +10,9 @@
 </head>
 <body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/am 1.png" >
+    <div class="center">
+        <img class="fullwidth" src="../assets/am 1.png" >
+    </div>
     <section>
         <div class="h1div">
             <h1>Active Mode</h1>
@@ -34,13 +36,13 @@
         <img class="fullwidth" src="../assets/am 4.png">
     </section>
     <section>
-        <img class="fullwidth w70" src="../assets/am 5.png">
+        <img class="fullwidth w50" src="../assets/am 5.png">
     </section>
     <section>
-        <img class="fullwidth w60" src="../assets/am 6.png">
+        <img class="fullwidth w50" src="../assets/am 6.png">
     </section>
     <section>
-        <img class="fullwidth w60 l-non" src="../assets/am 7.png">
+        <img class="fullwidth w50 l-non" src="../assets/am 7.png">
     </section>
     <section>
         <img class="fullwidth w70" src="../assets/am 8.png">
