--- a/project/artbay.html
+++ b/project/artbay.html
@@ -10,7 +10,9 @@
 </head>
 <body style="background-image: linear-gradient(180deg, rgba(193, 164, 110, 0.70) 36.64%, rgba(213, 189, 142, 0.31) 94.95%);">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/artbay 1.png">
+    <div class="center">
+        <img class="fullwidth" src="../assets/artbay 1.png">
+    </div>
     <section>
         <div class="h1div">
             <h1>ArtBay</h1>
