--- a/project/coaching.html
+++ b/project/coaching.html
@@ -10,7 +10,9 @@
 </head>
 <body style="background-color: #847865;">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/coach 1.png">
+    <div class="center">
+        <img class="fullwidth" src="../assets/coach 1.png">
+    </div>
     <section>
         <div class="h1div">
             <h1>Coaching</h1>
