--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -10,7 +10,9 @@
 </head>
 <body style="background: #311742;">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/dao 1.png">
+    <div class="center">
+        <img class="fullwidth" src="../assets/dao 1.png">
+    </div>
     <section>
         <div class="h1div">
             <h1>LIFT99 DAO</h1>
