--- a/project/zbuzz.html
+++ b/project/zbuzz.html
@@ -10,7 +10,9 @@
 </head>
 <body style="background-image: linear-gradient(155deg, #544B00 5.33%, rgba(20, 20, 19, 0.66) 36.6%, #2D4127 90.9%);">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/zbuzz 1.png">
+    <div class="center">
+        <img class="fullwidth" src="../assets/zbuzz 1.png">
+    </div>
     <section>
         <div class="h1div">
             <h1>ZBUZZ</h1>
