--- a/project/help99.html
+++ b/project/help99.html
@@ -10,7 +10,9 @@
 </head>
 <body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(31, 48, 29, 0.66) 36.6%, #0F2F04 90.9%);">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth" src="../assets/help99 1.png">
+    <div class="center">
+        <img class="fullwidth" src="../assets/help99 1.png">
+    </div>
     <section>
         <div class="h1div">
             <h1>HELP99</h1>
