--- a/project/sudoculus.html
+++ b/project/sudoculus.html
@@ -10,7 +10,9 @@
 </head>
 <body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
     <nav-menu base-path="../"></nav-menu>
-    <img class="fullwidth w50" src="../assets/sudoculus 1.png">
+    <div class="center">
+        <img class="fullwidth w50" src="../assets/sudoculus 1.png">
+    </div>
     <section>
         <div class="h1div">
             <h1>Sudoculus</h1>
