--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 </head>
 <body>
     <nav-menu></nav-menu>
-    <div style="position: fixed;">
-        <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
-        <div class="background" id="backgroundB"><p class="p-b">PORTFOLIO<br>&<br>STUFF</p></div>
-        <div id="custom-cursor"></div>
+    <div class="phone">
+        <a class="right" href="portfolio.html">PORTFOLIO<br>&<br>STUFF</a>
+        <a class="left" href="cv.html">CV<br>&<br>STUFF</a>
+    </div>
+    <div class="hover">
+        <div style="position: fixed;">
+            <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
+            <div class="background" id="backgroundB"><p class="p-b">PORTFOLIO<br>&<br>STUFF</p></div>
+            <div id="custom-cursor"></div>
+        </div>
     </div>
     <script src="index.js"></script>
     <script src="navigation.js"></script>
