phone pictures for portfolio

--- a/project/ua911.html
+++ b/project/ua911.html
@@ -27,13 +27,13 @@
         </p> 
     </section>
     <section>
-        <img class="fullwidth w90" src="../assets/911 2.png">
+        <img class="fullwidth" src="../assets/911 2.png">
     </section>
     <section>
-        <img class="fullwidth w80 r-non" style="top: -40px;" src="../assets/911 3.png">
+        <img class="fullwidth" src="../assets/911 3.png">
     </section>
     <section>
-        <img class="fullwidth w80 r-non" style="top: -40px;" src="../assets/911 4.png">
+        <img class="fullwidth" src="../assets/911 4.png">
     </section>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
