--- a/portfolio.html
+++ b/portfolio.html
@@ -13,64 +13,77 @@
         <div class="container">
             <nav-menu></nav-menu>
             <h1>Websites</h1>
-            <section class="swiper-section">
+            <section class="swiper-section logo-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>   
-                        <img class="project-img" src="assets/HR-min.png" style="background: #253946d1;">  
+                        <img class="project-img web" src="assets/HR-min.png" style="background: #253946d1;">  
+                        <img class="project-img phone" src="assets/hr phone.png" style="background: #253946d1;">  
                         <a class="morebutton" href="project/lift99-hr.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;">
+                        <img class="project-img web" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;">
+                        <img class="project-img phone" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;">
                         <a class="morebutton" href="project/coaching.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
+                        <img class="project-img web" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
+                        <img class="project-img phone" src="assets/pilar phone.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
                         <a class="morebutton" href="project/pilar-elias-art.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;">
+                        <img class="project-img web" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;">
+                        <img class="project-img phone" src="assets/zbuzz phone.png" style="background: #9d9d9db4;">
                         <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/DAO-min.png" style="background: #311742d6;">
+                        <img class="project-img web" src="assets/DAO-min.png" style="background: #311742d6;">
+                        <img class="project-img phone" src="assets/DAO phone.png" style="background: #311742d6;">
                         <a class="morebutton" href="project/lift99-dao.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+                        <img class="project-img web" src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+                        <img class="project-img phone" src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
                         <a class="morebutton" href="project/help99.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/UA 911.png" style="background-color: #253946dc;">
+                        <img class="project-img web" src="assets/UA 911.png" style="background-color: #253946dc;">
+                        <img class="project-img phone" src="assets/911 phone.png" style="background-color: #253946dc;">
                         <a class="morebutton" href="project/ua911.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                        <img class="project-img web" src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                        <img class="project-img phone" src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
                         <a class="morebutton" href="project/Leonardite.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;">
+                        <img class="project-img web" src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;">
+                        <img class="project-img phone" src="assets/Sudoculus phone.png" style="background: #4e5560ce;">
                         <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                        <img class="project-img web" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                        <img class="project-img phone" src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
                         <a class="morebutton" href="project/artbay.html">Check it out -></a>
                     </swiper-slide>
                 </swiper-container>
             </section>
             <p class="swipe"><-- swipe for more  --></p>
             <h1>App design</h1>
-            <section class="swiper-section">
+            <section class="swiper-section logo-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
+                    <swiper-slide>
+                        <img class="project-img web" src="assets/Active mode-min.png" style="background: #434c5ad1;">
+                        <img class="project-img phone" src="assets/am phone.png" style="background: #434c5ad1;">
+                        <a class="morebutton" href="project/active-mode.html">Check it out -></a>
+                    </swiper-slide>
                     <swiper-slide>   
-                        <img class="project-img" src="assets/Sudoculus app.jpg"> 
+                        <img class="project-img web" src="assets/Sudoculus app.jpg"> 
+                        <img class="project-img phone" src="assets/Sudoculus phone.png" style="background: #434c5ad1;"> 
                         <a class="morebutton" href="project/sudoculus.html">Check it out -></a>    
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img" src="assets/Active mode-min.png" style="background: #434c5ad1;">
-                        <a class="morebutton" href="project/active-mode.html">Check it out -></a>
-                    </swiper-slide>
-                    <swiper-slide>
-                        <img class="project-img" src="assets/word puzzle.jpg">
+                        <img class="project-img web" src="assets/word puzzle.jpg">
+                        <img class="project-img phone" src="assets/puzzle phone.png">
                     </swiper-slide>
                 </swiper-container>
             </section>
