update linked in link

--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
                 <h3>Social</h3>
                 <p>
                     <a href="https://www.instagram.com/zanzouneto">Instagram: Zanzouneto</a> 
-                    <br><a href="https://www.linkedin.com/in/zeina-saade-927222236">Zeina Saade</a>            
+                    <br><a href="https://www.linkedin.com/in/zeina-saade">Zeina Saade</a>            
                 </p>
             </div>
         </div>
