testing without the game

--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,8 @@
                 <h3>Social</h3>
                 <p>
                     <a href="https://www.instagram.com/zanzouneto">Instagram: Zanzouneto</a> 
-                    <br><a href="https://www.linkedin.com/in/zeina-saade">Zeina Saade</a>            
+                    <br><a href="https://www.linkedin.com/in/zeina-saade">Zeina Saade</a>   
+                    <br><a href="https://github.com/zanzouneto">Github: Zanzouneto</a>         
                 </p>
             </div>
         </div>
