--- a/testing.html
+++ b/testing.html
@@ -55,6 +55,11 @@
         </section>
         <p class="swipe"><-- swipe for more  --></p>
     </div>
+    <h1>Play my awesome game</h1>
+    <div class="center">
+        <iframe class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    </div>
+
     <script src="navigation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
 </body>
