--- a/testing.html
+++ b/testing.html
@@ -59,6 +59,10 @@
     <div class="center">
         <iframe class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
+    <h1>Something cool</h1>
+    <section class="center" style="margin-bottom: 60px;">
+        <iframe src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </section>
 
     <script src="navigation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
