--- a/portfolio.html
+++ b/portfolio.html
@@ -204,6 +204,10 @@
             </section>
             <p class="swipe"><-- swipe for more  --></p>
             <h1 style="line-height: 30px;">*Other*</h1>
+            <h1>Play my awesome game</h1>
+            <div class="center">
+                <iframe class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
+            </div>        
             <h1>Digital painting</h1>
             <section class="swiper-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
@@ -240,6 +244,10 @@
                 </swiper-container>
             </section>
             <p class="swipe"><-- swipe for more  --></p>
+            <h1>Something cool</h1>
+            <section class="center" style="margin-bottom: 60px;">
+                <iframe src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </section>        
         </div>
         <script src="navigation.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
