bigger screen update

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         <div class="container">
             <nav-menu></nav-menu>
             <h1>Websites</h1>
-            <section class="swiper-section logo-section">
+            <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>   
                         <img class="project-img web" src="assets/HR-min.png" style="background: #253946d1;">  
@@ -69,7 +69,7 @@
             </section>
             <p class="swipe"><-- swipe for more  --></p>
             <h1>App design</h1>
-            <section class="swiper-section logo-section">
+            <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
                         <img class="project-img web" src="assets/Active mode-min.png" style="background: #434c5ad1;">
