--- a/portfolio.html
+++ b/portfolio.html
@@ -209,7 +209,7 @@
                 <iframe class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
             </div>        
             <h1>Digital painting</h1>
-            <section class="swiper-section">
+            <section class="swiper-section painting">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
                         <img src="assets/bugeyes.jpg" style="background-color: #273128;" class="painting">
