--- a/portfolio.html
+++ b/portfolio.html
@@ -245,6 +245,7 @@
             </section>
             <p class="swipe"><-- swipe for more  --></p>
             <h1>Something cool</h1>
+            <p>The Creation of Kalyanchik. Laser cut plywood</p>
             <section class="center" style="margin-bottom: 60px;">
                 <iframe src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>        
