--- a/portfolio.html
+++ b/portfolio.html
@@ -11,17 +11,16 @@
 <body>
     <div class="bigger-container">
         <div class="container">
-            <nav-menu></nav-menu>
             <h1>Websites</h1>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>   
-                        <img class="project-img web" src="assets/HR-min.png" style="background: #253946d1;">  
+                        <img class="project-img web" loading="eager" src="assets/HR-min.png" style="background: #253946d1;">  
                         <img class="project-img phone" src="assets/hr phone.png" style="background: #253946d1;">  
                         <a class="morebutton" href="project/lift99-hr.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;">
+                        <img class="project-img web" loading="eager" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;">
                         <img class="project-img phone" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;">
                         <a class="morebutton" href="project/coaching.html">Check it out -></a>   
                     </swiper-slide>
@@ -72,7 +71,7 @@
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
-                        <img class="project-img web" src="assets/Active mode-min.png" style="background: #434c5ad1;">
+                        <img class="project-img web" loading="eager" src="assets/Active mode-min.png" style="background: #434c5ad1;">
                         <img class="project-img phone" src="assets/am phone.png" style="background: #434c5ad1;">
                         <a class="morebutton" href="project/active-mode.html">Check it out -></a>
                     </swiper-slide>
@@ -93,13 +92,13 @@
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
-                            <img class="logo-img" src="assets/active mode logo.png">
+                            <img class="logo-img" loading="eager" src="assets/active mode logo.png">
                         </div>
                         <a class="morebutton" href="project/active-mode.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Tottaly\ jasmine\ logo\ bg-min.jpg);" >
-                            <img class="logo-img" src="assets/totally jasmin logo.png">
+                            <img class="logo-img" loading="eager" src="assets/totally jasmin logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
@@ -145,7 +144,7 @@
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Kafroun\ paragliding\ logo\ bg-min.jpg);" >
-                            <img class="logo-img" src="assets/paragliding logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/paragliding logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
@@ -156,48 +155,48 @@
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background: #FFFCF3;" >
-                            <img class="logo-img" src="assets/jaz logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/jaz logo.png">
                         </div> 
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background: #FFF;" >
-                            <img class="logo-img" src="assets/sudoculus logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/sudoculus logo.png">
                         </div>
                         <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg.jpg);" >
-                            <img class="logo-img" src="assets/amal logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/amal logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Angelic\ Assosiation\ of\ Anis\ Saade\ logo\ bg-min.jpg);" >
-                            <img class="logo-img" src="assets/aaas logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/aaas logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background: #D7EBF2;" >
-                            <img class="logo-img" src="assets/keenel logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/keenel logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background: #FFFCF3;" >
-                            <img class="logo-img" src="assets/zbowls logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/zbowls logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-color: #FFDE17;" >
-                            <img class="logo-img" src="assets/walid logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/walid logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Golden\ dynasty\ logo\ bg-min.jpg);" >
-                            <img class="logo-img" src="assets/golden dynasty logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/golden dynasty logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-color: #FDED1C;" >
-                            <img class="logo-img" src="assets/skylux avia logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/skylux avia logo.png">
                         </div>
                     </swiper-slide>
                 </swiper-container>
@@ -212,13 +211,13 @@
             <section class="swiper-section painting">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
-                        <img src="assets/bugeyes.jpg" style="background-color: #273128;" class="painting">
+                        <img src="assets/bugeyes.jpg" loading="eager" style="background-color: #273128;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/book orb.jpg" style="background-color: #101010;" class="painting">
+                        <img src="assets/book orb.jpg" loading="eager" style="background-color: #101010;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/skull.jpg" style="background-color: #222327;" class="painting">
+                        <img src="assets/skull.jpg" loading="eager" style="background-color: #222327;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
                         <img src="assets/fruits edited.jpg" style="background-color: #B5B6BA;" class="painting">
@@ -230,16 +229,16 @@
                         <img src="assets/up.jpg" style="background-color: #224194;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/mulan.jpg" style="background-color: #FAD48B;" class="painting">
+                        <img src="assets/mulan.jpg" loading="lazy" style="background-color: #FAD48B;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/prespective.jpg" style="background-color: #F0F0F0;" class="painting">
+                        <img src="assets/prespective.jpg" loading="lazy" style="background-color: #F0F0F0;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/eye.jpg" style="background-color: #49524F;" class="painting">
+                        <img src="assets/eye.jpg" loading="lazy" style="background-color: #49524F;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/fruits.jpg" style="background-color: #8D8E93;" class="painting">
+                        <img src="assets/fruits.jpg" loading="lazy" style="background-color: #8D8E93;" class="painting">
                     </swiper-slide>
                 </swiper-container>
             </section>
@@ -250,8 +249,9 @@
                 <iframe src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>        
         </div>
-        <script src="navigation.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     </div>
+    <script src="navigation.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+    <nav-menu></nav-menu>
 </body>
 </html>
