--- a/portfolio.html
+++ b/portfolio.html
@@ -103,43 +103,43 @@
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg.jpg);" >
-                            <img class="logo-img" src="assets/emuse logo.png">
+                            <img class="logo-img"  loading="lazy"  src="assets/emuse logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-color: #1C1D1D;" >
                             <img class="logo-img" src="assets/zbuzz logo.png">
                         </div>
-                        <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
+                        <a class="morebutton"  loading="lazy"  href="project/zbuzz.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);" >
-                            <img class="logo-img" src="assets/middle litoral logo.png">
+                            <img class="logo-img"  loading="lazy"  src="assets/middle litoral logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-color: #1D315C;" >
-                            <img class="logo-img" src="assets/aaz trading co logo.png">
+                            <img class="logo-img"  loading="lazy"  src="assets/aaz trading co logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Charm\ of\ the\ elements\ logo\ bg-min.jpg);" >
-                            <img class="logo-img" src="assets/charm of  the elements logo.png">
+                            <img class="logo-img"  loading="lazy"  src="assets/charm of  the elements logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Katia\ G\ Saade\ logo\ bg-min.jpg);" >
-                            <img class="logo-img" src="assets/katia g saade logo.png">
+                            <img class="logo-img"  loading="lazy"  src="assets/katia g saade logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>            
                         <div class="logo-div" style="background-image: url(assets/Gallivanters\ log\ logo\ bg-min.jpg);" >
-                            <img class="logo-img" src="assets/galivanter log logo.png" style="max-width: 500px;">
+                            <img class="logo-img"  loading="lazy"  src="assets/galivanter log logo.png" style="max-width: 500px;">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);" >
-                            <img class="logo-img" src="assets/depo logo.png">
+                            <img class="logo-img"  loading="lazy" src="assets/depo logo.png">
                         </div>
                     </swiper-slide>
                     <swiper-slide>
@@ -149,7 +149,7 @@
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background: #F8F5F1;" >
-                            <img class="logo-img" src="assets/aaz leonardite logo.png">
+                            <img class="logo-img"  loading="lazy"  src="assets/aaz leonardite logo.png">
                             <a class="morebutton" href="project/Leonardite.html">Check it out -></a>
                         </div>
                     </swiper-slide>
