--- a/portfolio.html
+++ b/portfolio.html
@@ -15,53 +15,53 @@
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>   
-                        <img class="project-img web" loading="eager" src="assets/HR-min.png" style="background: #253946d1;">  
-                        <img class="project-img phone" src="assets/hr phone.png" style="background: #253946d1;">  
+                        <img class="project-img web" rel="preload" loading="eager" src="assets/HR-min.png" style="background: #253946d1;">  
+                        <img class="project-img phone" rel="preload" loading="eager" src="assets/hr phone.png" style="background: #253946d1;">  
                         <a class="morebutton" href="project/lift99-hr.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
                         <img class="project-img web" loading="eager" src="assets/Coaches for Ukraine-min.png" style="background: #434c5ab9;">
-                        <img class="project-img phone" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;">
+                        <img class="project-img phone" loading="eager" src="assets/Coaches for Ukraine phone.png" style="background: #434c5ab9;">
                         <a class="morebutton" href="project/coaching.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
-                        <img class="project-img phone" src="assets/pilar phone.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
+                        <img class="project-img web" loading="eager" src="assets/Pilar-1-min.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
+                        <img class="project-img phone" loading="eager" src="assets/pilar phone.png" style="background: linear-gradient(18deg, #59111fe0 28.56%, #ad2f2fd7 71.41%), #ffffffb7;">
                         <a class="morebutton" href="project/pilar-elias-art.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;">
-                        <img class="project-img phone" src="assets/zbuzz phone.png" style="background: #9d9d9db4;">
+                        <img class="project-img web" loading="lazy" src="assets/ZBuzz-1-min.png" style="background: #9d9d9db4;">
+                        <img class="project-img phone" loading="lazy" src="assets/zbuzz phone.png" style="background: #9d9d9db4;">
                         <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/DAO-min.png" style="background: #311742d6;">
-                        <img class="project-img phone" src="assets/DAO phone.png" style="background: #311742d6;">
+                        <img class="project-img web" loading="lazy" src="assets/DAO-min.png" style="background: #311742d6;">
+                        <img class="project-img phone" loading="lazy" src="assets/DAO phone.png" style="background: #311742d6;">
                         <a class="morebutton" href="project/lift99-dao.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
-                        <img class="project-img phone" src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+                        <img class="project-img web" loading="lazy"  src="assets/Help99-min.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
+                        <img class="project-img phone" loading="lazy"  src="assets/help99 phone.png" style="background: linear-gradient(155deg, #043016 5.33%, rgba(55, 90, 50, 0.66) 36.6%, #0F2F04 90.9%);">
                         <a class="morebutton" href="project/help99.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/UA 911.png" style="background-color: #253946dc;">
-                        <img class="project-img phone" src="assets/911 phone.png" style="background-color: #253946dc;">
+                        <img class="project-img web" loading="lazy"  src="assets/UA 911.png" style="background-color: #253946dc;">
+                        <img class="project-img phone" loading="lazy"  src="assets/911 phone.png" style="background-color: #253946dc;">
                         <a class="morebutton" href="project/ua911.html">Check it out -></a>   
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
-                        <img class="project-img phone" src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                        <img class="project-img web" loading="lazy"  src="assets/AAZ web preview-min.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                        <img class="project-img phone" loading="lazy"  src="assets/aaz phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
                         <a class="morebutton" href="project/Leonardite.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;">
-                        <img class="project-img phone" src="assets/Sudoculus phone.png" style="background: #4e5560ce;">
+                        <img class="project-img web" loading="lazy"  src="assets/Sudoculus-1-min.png" style="background: #4e5560ce;">
+                        <img class="project-img phone" loading="lazy"  src="assets/Sudoculus phone.png" style="background: #4e5560ce;">
                         <a class="morebutton" href="project/sudoculus.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
-                        <img class="project-img phone" src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                        <img class="project-img web" loading="lazy" src="assets/Art of scandenavia web preview.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
+                        <img class="project-img phone" loading="lazy"  src="assets/artbay phone.png" style="background: linear-gradient(180deg, #395B6A 0%, rgba(57, 91, 106, 0.66) 55.07%, #395B6A 100%);">
                         <a class="morebutton" href="project/artbay.html">Check it out -></a>
                     </swiper-slide>
                 </swiper-container>
@@ -71,8 +71,8 @@
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
-                        <img class="project-img web" loading="eager" src="assets/Active mode-min.png" style="background: #434c5ad1;">
-                        <img class="project-img phone" src="assets/am phone.png" style="background: #434c5ad1;">
+                        <img class="project-img web" rel="preload" loading="eager" src="assets/Active mode-min.png" style="background: #434c5ad1;">
+                        <img class="project-img phone" rel="preload" loading="eager" src="assets/am phone.png" style="background: #434c5ad1;">
                         <a class="morebutton" href="project/active-mode.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>   
@@ -81,8 +81,8 @@
                         <a class="morebutton" href="project/sudoculus.html">Check it out -></a>    
                     </swiper-slide>
                     <swiper-slide>
-                        <img class="project-img web" src="assets/word puzzle.jpg">
-                        <img class="project-img phone" src="assets/puzzle phone.png">
+                        <img class="project-img web" loading="lazy" src="assets/word puzzle.jpg">
+                        <img class="project-img phone" loading="lazy" src="assets/puzzle phone.png">
                     </swiper-slide>
                 </swiper-container>
             </section>
@@ -92,7 +92,7 @@
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
-                            <img class="logo-img" loading="eager" src="assets/active mode logo.png">
+                            <img class="logo-img" rel="preload" loading="eager" src="assets/active mode logo.png">
                         </div>
                         <a class="morebutton" href="project/active-mode.html">Check it out -></a>
                     </swiper-slide>
@@ -108,9 +108,9 @@
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-color: #1C1D1D;" >
-                            <img class="logo-img" src="assets/zbuzz logo.png">
+                            <img class="logo-img" loading="lazy" src="assets/zbuzz logo.png">
                         </div>
-                        <a class="morebutton"  loading="lazy"  href="project/zbuzz.html">Check it out -></a>
+                        <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);" >
@@ -205,28 +205,28 @@
             <h1 style="line-height: 30px;">*Other*</h1>
             <h1>Play my awesome game</h1>
             <div class="center">
-                <iframe class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                <iframe loading="lazy" class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
             </div>        
             <h1>Digital painting</h1>
             <section class="swiper-section painting">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
-                        <img src="assets/bugeyes.jpg" loading="eager" style="background-color: #273128;" class="painting">
+                        <img src="assets/bugeyes.jpg" rel="preload" loading="eager" style="background-color: #273128;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
                         <img src="assets/book orb.jpg" loading="eager" style="background-color: #101010;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/skull.jpg" loading="eager" style="background-color: #222327;" class="painting">
+                        <img src="assets/skull.jpg" loading="lazy" style="background-color: #222327;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/fruits edited.jpg" style="background-color: #B5B6BA;" class="painting">
+                        <img src="assets/fruits edited.jpg" loading="lazy" style="background-color: #B5B6BA;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/pot.jpg" style="background-color: #1C1F28;" class="painting">
+                        <img src="assets/pot.jpg" loading="lazy" style="background-color: #1C1F28;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
-                        <img src="assets/up.jpg" style="background-color: #224194;" class="painting">
+                        <img src="assets/up.jpg" loading="lazy" style="background-color: #224194;" class="painting">
                     </swiper-slide>
                     <swiper-slide>
                         <img src="assets/mulan.jpg" loading="lazy" style="background-color: #FAD48B;" class="painting">
@@ -246,7 +246,7 @@
             <h1>Something cool</h1>
             <p>The Creation of Kalyanchik. Laser cut plywood</p>
             <section class="center" style="margin-bottom: 60px;">
-                <iframe src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe loading="lazy" src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>        
         </div>
     </div>
