--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
     <div class="bigger-container">
         <div class="container">
             <h1>Websites</h1>
+            <p>#Web Design #Web Development #Webflow Development</p>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>   
@@ -68,6 +69,7 @@
             </section>
             <p class="swipe"><-- swipe for more  --></p>
             <h1>App design</h1>
+            <p>#App Design #Icon Design</p>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                     <swiper-slide>
@@ -202,8 +204,9 @@
                 </swiper-container>
             </section>
             <p class="swipe"><-- swipe for more  --></p>
-            <h1 style="line-height: 30px;">*Other*</h1>
+            <h2 style="margin-bottom: -30px;">*Other*</h1>
             <h1>Play my awesome game</h1>
+            <p>#Scratch Development</p>
             <div class="center">
                 <iframe loading="lazy" class="printer" src="https://scratch.mit.edu/projects/909201845/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
             </div>        
