--- a/portfolio.html
+++ b/portfolio.html
@@ -204,7 +204,7 @@
                 </swiper-container>
             </section>
             <p class="swipe"><-- swipe for more  --></p>
-            <h2 style="margin-bottom: -30px;">*Other*</h1>
+            <h2>*Other*</h1>
             <h1>Play my awesome game</h1>
             <p>#Scratch Development</p>
             <div class="center">
