--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
                 <h3>Social</h3>
                 <p>
                     <a href="https://www.instagram.com/zanzouneto">Instagram: Zanzouneto</a> 
-                    <br><a href="https://www.linkedin.com/in/zeina-saade">Zeina Saade</a>   
+                    <br>Linkedin<a href="https://www.linkedin.com/in/zeina-saade">Zeina Saade</a>   
                     <br><a href="https://github.com/zanzouneto">Github: Zanzouneto</a>         
                 </p>
             </div>
@@ -103,11 +103,17 @@
                         <li>3Ds max</li>
                         <li>Imovies</li>
                         <li>Scratch</li>
+                        <li>Sketch</li>
+                        <li>Zeplin</li>
+                        <li>Invision</li>
                     </ul>
                     <ul class="non-bullet-list">
                         <li>🔴🔴🔴🔴🔴</li>
                         <li>🔴🔴🔴🔴🔴</li>
                         <li>🔴🔴⭕️⭕️⭕️</li>
+                        <li>🔴🔴🔴🔴🔴</li>
+                        <li>🔴🔴🔴🔴🔴</li>
+                        <li>🔴🔴🔴🔴🔴</li>
                         <li>🔴🔴🔴🔴🔴</li>
                         <li>🔴🔴🔴🔴🔴</li>
                     </ul>
