--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -17,6 +17,7 @@
         <div class="h1div">
             <h1>LIFT99 HR</h1>
         </div>
+        <a class="link" target="_blank" href="https://lift99-hr.webflow.io/">Check out live web</a>
     </section>
     <section>
         <p class="highlighted smaller">
