--- a/project/coaching.html
+++ b/project/coaching.html
@@ -17,6 +17,7 @@
         <div class="h1div">
             <h1>Coaching</h1>
         </div>
+        <a class="link" target="_blank" href="https://www.coachesforukraine.com/">Check out live web</a>
     </section>
     <section>
         <p class="highlighted smaller">
