--- a/project/help99.html
+++ b/project/help99.html
@@ -17,6 +17,7 @@
         <div class="h1div">
             <h1>HELP99</h1>
         </div>
+        <a class="link" target="_blank" href="https://www.help99.co/">Check out live web</a>
     </section>
     <section>
         <p class="highlighted smaller">
