--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -17,6 +17,7 @@
         <div class="h1div">
             <h1>LIFT99 DAO</h1>
         </div>
+        <a class="link" target="_blank" href="https://lift99-dao.webflow.io/">Check out live web</a>
     </section>
     <section>
         <p class="highlighted smaller">
