--- a/project/pilar-elias-art.html
+++ b/project/pilar-elias-art.html
@@ -17,6 +17,7 @@
         <div class="h1div">
             <h1>Pilar</h1>
         </div>
+        <a class="link" target="_blank" href="https://pilar-elias-art.vercel.app/">Check out live web</a>
     </section>
     <section>
         <p class="highlighted smaller">
