--- a/project/zbuzz.html
+++ b/project/zbuzz.html
@@ -17,6 +17,7 @@
         <div class="h1div">
             <h1>ZBUZZ</h1>
         </div>
+        <a class="link" target="_blank" href="https://zbuzz.webflow.io/">Check out live web</a>
     </section>
     <section>
         <p class="highlighted smaller">
