seperating the web projects

--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeina's CV</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="cv.css">
     <script src="elements.js"></script>
     <header-links></header-links>
