--- a/portfolio copy.html
+++ b/portfolio copy.html
@@ -41,6 +41,7 @@
                     </swiper-slide>
                 </swiper-container>
             </section>
+            <div class="hireme">Need a Stunning Website? Contact me!</div>
             <p>Webflow Development projects</p>
             <p class="swipe"><-- swipe for more  --></p>
             <section class="swiper-section project-section">
@@ -62,6 +63,7 @@
                     </swiper-slide>
                 </swiper-container>
             </section>
+            <div class="hireme">Need a Stunning Website? Contact me!</div>
             <p>Web Design projects</p>
             <p class="swipe"><-- swipe for more  --></p>
             <section class="swiper-section project-section">
@@ -95,7 +97,7 @@
                 </swiper-container>
             </section>    
             <h1>App design</h1>
-            <p>#App Design  #Icon Design</p>
+            <p>#App Design  #Icon Design projects</p>
             <p class="swipe"><-- swipe for more  --></p>
             <section class="swiper-section project-section">
                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
